# kafka-demo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Directory.Build.props  Directory.Packages.props  Dockerfile.api  Dockerfile.f1  Makefile  README.md  docker-compose.api.yaml  docker-compose.f1-1.yaml  docker-compose.f1-2.yaml  docker-compose.yaml  global.json  kafka-demo.sln  kind.yaml  pyproject.toml
.config/: dotnet-tools.json
protobuf/: app_status.proto  car_data.proto  circute.proto  laps.proto  operation.proto  position_data.proto  race_control_messages.proto  request.proto  session.proto  session_status.proto  track_status.proto  weather_data.proto
src/Company.API/: Company.API.csproj  Program.cs  WebApplicationBuilderExtensions.cs
src/Company.API.Application/: Company.API.Application.csproj  ConfluentOptions.cs  ServiceCollectionExtensions.cs  WebApplicationExtensions.cs
src/Company.API.Application/CloudEvents/: CloudEventsExtensions.cs
src/Company.API.Application/Infrastructure/: IMemoryOperationStorage.cs  MemoryOperationStorage.cs  ServiceCollectionExtensions.cs
src/Company.API.Application/Validation/: OptionBuilderFluentValidationExtensions.cs  ValidationBehavior.cs  ValidationExceptionHandlingMiddleware.cs
src/Company.API/Configurations/: confluent.Development.json  confluent.Test.json  session.json  telemetry.Development.json  topics.json
src/Company.Domain/: Company.Domain.csproj
src/f1/: __init__.py  config.py  enums.py  heartbeat.py  kafka_admin.py  kafka_producer.py  kafka_request_consumer.py  log.py  main.py  session.py
(+44 files in other folders)
